hphp/test/slow/hack_mode/2204.php.expectf
Fatal error: An expression is expected here. in %s/test/slow/hack_mode/2204.php on line 3
